syntax = "proto3";

option csharp_namespace = "Mix.Mq.Server";
import "google/protobuf/empty.proto";

package mixmq;

// The greeting service definition.
service MixMq {
  // Sends a greeting
  rpc Subscribe (MixSubscribeRequest) returns (stream MixSubscribeReply);
  rpc Disconnect (MixSubscribeRequest) returns (google.protobuf.Empty);
  rpc Publish (MixPublishMessageRequest) returns (google.protobuf.Empty);
}

// The request message containing the user's name.
message MixSubscribeRequest {
  string topicId = 1;
  string subsctiptionId = 2;
}

message MixPublishMessageRequest {
	string topicId = 1;
  string message = 2;
}

// The response message containing the greetings.
message MixSubscribeReply {
  repeated string messages = 1;
}
